ST-003: temp fix the stretching background image issue

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 header {
   width: 100%;
   height: 500px;
+  background-color: black;
   position: relative;
 }
 
@@ -35,6 +36,5 @@ header {
 }
 
 #header-image {
-  width: 100%;
-  max-height: 500px;
+  max-height: 100%;
 }
